# AoC2020

Day10/: Day10.hs
Day11/: Day11.cabal  Main.hs
Day12/: Day12.cabal  Main.hs
Day13/: Day13.cabal  input  testInput2  testInput5
Day13/src/: Main.hs
Day14/: Day14.cabal
Day14/src/: Main.hs
Day15/: Alternative.hs  Day15.cabal  Main.hs
Day16/: Day16.cabal  Main.hs
Day17/: Day17.cabal  Day17.prof  Day17Hyper.prof  Hyper.hs  Main.hs  README.md
Day18/: Day18.cabal  LICENSE  Main.hs  README.md
Day9/: Day9.hs  input
