name:                Day12
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/tumist/Day12#readme
license:             BSD3
license-file:        LICENSE
author:              Tumi Steingrímsson
maintainer:          tumi.st@gmail.com
copyright:           2020 Tumi Steingrímsson
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable Day12
  hs-source-dirs:      .
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
