name:                Day13
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/tumist/Day13#readme
license:             BSD3
license-file:        LICENSE
author:              Tumi Steingrímsson
maintainer:          tumi.st@gmail.com
copyright:           2020 Tumi Steingrímsson
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable Day13
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5